language/move-lang/tests/move_check/expansion/public_main.exp
error: 

   ┌── tests/move_check/expansion/public_main.move:2:1 ───
   │
 2 │ public fun main() {
   │ ^^^^^^ Extraneous 'public' modifier. Script functions are always public
   │

